[package]
name = "sn_dbc_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
sn_dbc = {git="https://github.com/dan-da/sn_dbc.git", features = ["serdes", "mock"], branch="mock_feature"}
structopt = "0.3.25"
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "io-util"] }
serde = "1.0.130"
log = "0.4.14"
env_logger = "0.9.0"
bincode = "1.3.3"
futures = "0.3.17"
bytes = "1.1.0"
rustyline = "9.0.0"
chrono = {version = "0.4.19", features = ["serde"]}
hex = "0.4.3"
bls_dkg = "0.10.0"
xor_name = "4.0.1"
ron = "0.7.0"
thiserror = "1.0.30"

[target.'cfg(unix)'.dependencies.termios]
version = "0.3.3"

[dependencies.qp2p]
version = "0.28.5"
features = ["structopt"]

[dependencies.miette]
version = "3.2.0"
features = ["fancy"]
